Fixed script and added reset date button

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <span>Seconds</span>
             </div>
         </div>
-        <br>
+        <h1>Click the button to reset the date</h1>
+            <button onclick = "resetDate()">Reset Date</button>
         <div class = "buttons">
             <h1>Click the button to set a timer</h1>
                 <button onclick="setTimer()">Set Timer</button>
